# AudioScript

./: .gitignore  LICENSE  README.md  package.json
.cursor/: mcp.json
.cursor/rules/: nextjs-best-practices.mdc  radix-ui-best-practices.mdc  react-best-practices.mdc  shadcn-ui-best-practices.mdc  tailwindcss-best-practices.mdc  typescript-best-practices.mdc
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: transcription.py
backend/app/core/: config.py
backend/app/models/: transcription.py
backend/app/services/: transcription.py  whisper.py
docs/: api.md  architecture.md  frontend-backend-interaction.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: transcription-result.tsx  upload-form.tsx
frontend/src/config/: constants.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
