[project]
name = "audioscript-backend"
version = "0.1.0"
description = "AudioScript backend service"
authors = [{ name = "Wenliang Zeng" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.28",
    "alembic>=1.13.1",
    "aiofiles>=23.2.1",
    "httpx>=0.27.0",
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "openai>=1.14.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["app"] 